fix: simplify implementation to work with langchain4j 0.31.0